ingress-controller/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      containers:
      - image: registry.eccd.local:5000/nginx-ingress-controller:0.32.0-1-8b9624c1
        name: nginx-ingress-controller
        args:
        - /nginx-ingress-controller 
        #within ingress-Controller pod nginx program is 
        #stored in /nginx-ingress-controller. 
        #So we need ti start the controller using the arg. 
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
        - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
        - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
        - --annotations-prefix=nginx.ingress.kubernetes.io
        - --enable-ssl-passthrough
        # we need these environmental variables that carry pods name and namespace. The nginx service needs these two env varaiables to read configuration data fro within the pod.
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
