ingress-controller/ingresspods-lbsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
  - name: http
    nodePort: 31151
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 31318
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: ingress-nginx
    
    
#This can be verified using: 
  #curl http://<nodeIP>:31151/healthz
  #curl http://<lb-ip>:80/healthz
