ingress-controller/ingress1.yaml
#simple ingress service definition file to route traffic to pods without any specific URL

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name:
spec:
    backend:
        serviceName: ezpedvi-wear
        servicePort: 80
        
#kubectl run ezpedvi-frontend --image=k8s-registry.eccd.local/nginx
#kubectl expose pods ezpedvi-wear --port 80
#verify using curl http://<lb-ip>:80

#k8s@dire:~/ezpedvi> kubectl get pods,svc,ep,ingress | grep ezpedvi
#pod/ezpedvi-wear   1/1     Running   0          118m
#service/ezpedvi-wear   ClusterIP   10.99.1555.131   <none>        80/TCP    46s
#endpoints/ezpedvi-wear   192.168.73.216:80                                46s
#ingress.extensions/ezpedvi-ingress-normal   <none>   *                     10.0.10.5,10.0.10.7   80      111s
