ingress-controller/secure_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
spec:
  tls:
  - hosts:
      - secure-ingress.com  #name should match the CN in certificate
    secretName: secure-ingress
  rules:
  - host: secure-ingress.com
    http:
      paths:
      - path: /service1   #URL service path
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
      - path: /service2
      pathType: Prefix
      backend:
        service:
          name: service2
          port:
            number: 80
